// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connector details step render for create kubernetes connector step one 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
  >
    <div
      class="heading"
    >
      Kubernetes Cluster Overview
    </div>
    <div
      class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="StyledProps--font StyledProps--main"
              style="min-height: 460px;"
            >
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main connectorFormNameWrapper"
                >
                  <div
                    class="StyledProps--font StyledProps--main connectorFormNameElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          ID
                          :
                        </p>
                        <span
                          class="InputWithIdentifier--idInput"
                          contenteditable="true"
                        />
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main"
                          icon="edit"
                          style="vertical-align: middle;"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          Name
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                    style="justify-content: center;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--color StyledProps--color-blue500"
                    >
                      + Description
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--color StyledProps--color-blue500"
                    >
                      + Tags
                    </p>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main connectorFormElm"
                >
                  
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  <span>
                    Save and Continue
                  </span>
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Connector details step render for create kubernetes connector step one 2`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
  >
    <div
      class="heading"
    >
      Kubernetes Cluster Overview
    </div>
    <div
      class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="StyledProps--font StyledProps--main"
              style="min-height: 460px;"
            >
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main connectorFormNameWrapper"
                >
                  <div
                    class="StyledProps--font StyledProps--main connectorFormNameElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          ID
                          :
                        </p>
                        <span
                          class="InputWithIdentifier--idInput"
                          contenteditable="true"
                        />
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main"
                          icon="edit"
                          style="vertical-align: middle;"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          Name
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main connectorFormElm"
                >
                  <div
                    class="bp3-form-group expandedDescription"
                  >
                    <label
                      class="bp3-label"
                      for="description"
                    >
                      <div
                        class="StyledProps--font StyledProps--main headerRow"
                      >
                        <span
                          class="StyledProps--font StyledProps--main StyledProps--inline"
                        >
                          Description
                        </span>
                        <span
                          class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--inline StyledProps--color StyledProps--color-blue500"
                        >
                          remove
                        </span>
                      </div>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <textarea
                        autocomplete="off"
                        class="bp3-input bp3-fill"
                        name="description"
                      />
                    </div>
                  </div>
                  <div
                    class="bp3-form-group expandedTags"
                  >
                    <label
                      class="bp3-label"
                      for="tags"
                    >
                      <div
                        class="StyledProps--font StyledProps--main headerRow"
                      >
                        <span
                          class="StyledProps--font StyledProps--main StyledProps--inline"
                        >
                          Tags
                        </span>
                        <span
                          class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--inline StyledProps--color StyledProps--color-blue500"
                        >
                          remove
                        </span>
                      </div>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input bp3-tag-input"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <input
                            class="bp3-input-ghost"
                            data-mentions="kv-tag-input-tags}"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  <span>
                    Save and Continue
                  </span>
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
